[tool.poetry]
name = "bttr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pytorch = "1.7.0"
torchvision = "^0.15.2"
cudatoolkit = "12.2.91"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
