[tool.poetry]
name = "bttr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = { url = "https://download.pytorch.org/whl/cu110/torch-1.7.0%2Bcu110-cp37-cp37m-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu110/torchvision-0.8.1%2Bcu110-cp37-cp37m-win_amd64.whl" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
